# geodesic_matlab

./: .gitignore  CMakeLists.txt  README.md  example0.vcxproj  example1.vcxproj  geodesic.vcxproj
.github/workflows/: ccpp.yml
matlab/: create_subdivision_pattern.m  example1.m  example2.m  example3.m  example4.m  example5.m  extract_coordinates_from_path.m  geodesic_convert_surface_points.m  geodesic_delete.m  geodesic_distance_and_source.m  geodesic_new_algorithm.m  geodesic_new_mesh.m  geodesic_trace_back.m
src/: geodesic_matlab_api.cpp  geodesic_matlab_api.h  geodesic_mesh.h  geodesic_mesh_elements.h
